spade-tests/src/snapshots/spade_tests__linear_check__checking_works_with_decld_value.snap
---
source: spade-tests/src/linear_check.rs
---
extern entity consume(p: inv &bool) -> bool;

entity test() -> bool {
    decl x;
    let _ = inst consume(x);
    let x = inst new_mut_wire();
    let _ = inst consume(x);
    true
}


error: Use of consumed resource
  ┌─ testinput:7:26
  │
5 │     let _ = inst consume(x);
  │                          - Previously used here
6 │     let x = inst new_mut_wire();
7 │     let _ = inst consume(x);
  │                          ^ Use of consumed resource
